--- a/test/fixtures/extras.yml
+++ b/test/fixtures/extras.yml
@@ -1,15 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  mess_id: 1
-  date: 2020-05-29
-  rollno: MyString
+  student_id: 1
+  date: 2020-05-30
   item: MyString
   price: 1
 
 two:
-  mess_id: 1
-  date: 2020-05-29
-  rollno: MyString
+  student_id: 1
+  date: 2020-05-30
   item: MyString
   price: 1
