--- a/test/fixtures/guests.yml
+++ b/test/fixtures/guests.yml
@@ -1,13 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  name: MyString
+  rollno: MyString
   student_id: 1
-  name: MyText
-  rollno: MyText
-  date: 2020-05-29
 
 two:
+  name: MyString
+  rollno: MyString
   student_id: 1
-  name: MyText
-  rollno: MyText
-  date: 2020-05-29
